Add meta tag for monetag in index.html3

--- a/index.html - SmartXO [GitHub] - Visual Studio Code2 - GitHub.html
+++ b/index.html - SmartXO [GitHub] - Visual Studio Code2 - GitHub.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <!-- saved from url=(0038)https://github.dev/Smartalhub3/SmartXO -->
-<html lang="en" class="github-light" data-color-mode="light" data-dark-theme="light"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script>performance.mark('code/didStartRenderer');</script><script nonce="wRFGjqwfypNiDMTee6pAIg==" themeset="">if (document.documentElement.classList.contains('unknown-theme')) {
+<html lang="en" class="github-light" data-color-mode="light" data-dark-theme="light">
+	<head>
+	<meta name="monetag" content="7b9572894a9bd0f2ca2b86d4253c1537">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script>performance.mark('code/didStartRenderer');</script><script nonce="wRFGjqwfypNiDMTee6pAIg==" themeset="">if (document.documentElement.classList.contains('unknown-theme')) {
 				if (!!window.matchMedia('(prefers-color-scheme: dark)').matches) {
 					document.documentElement.classList.replace('unknown-theme', 'github-dark');
 					document.documentElement.setAttribute('data-color-mode', 'dark');
