--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="monetag" content="10fec79f784633eb63b040f82399ba47">
   <title>SmartXO - لعبة XO احترافية</title>
   <style>
     :root{
