--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <header>
       <h1>SmartXO — لعبة XO احترافية</h1>
       <div class="controls">
+        <script>(function(s){s.dataset.zone='10283213',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
         <label for="mode">الوضع:</label>
         <script>(function(s){s.dataset.zone='10283180',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
         <select id="mode">
